k3s/affine/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: affine
  namespace: affine
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`affine.d-kline.org`)
      kind: Rule
      services:
        - name: affine
          port: 3010
      middlewares:
        - name: local-only
          namespace: traefik
        - name: security-headers
          namespace: traefik
  tls: {}
