k3s/affine/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: affine
  namespace: affine
spec:
  endpointSelector:
    matchLabels:
      app: affine
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "3010"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: dragonfly
            app: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: affine
            cnpg.io/cluster: affine-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
